force-app/src/objects/c2g__massActionsSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Mass Actions Settings</description>
    <fields>
        <fullName>c2g__DuplicateCashEntryScopeSize__c</fullName>
        <description>The maximum number of cash entries to be duplicated in one go. By default, up to 20 cash entries can be duplicated.</description>
        <inlineHelpText>The maximum number of cash entries to be duplicated in one go. By default, up to 20 cash entries can be duplicated.</inlineHelpText>
        <label>Cash Entry Duplication Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DuplicateJournalRunInParallel__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, documents are duplicated in parallel for faster processing.</description>
        <label>Parallel Document Duplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DuplicateJournalScopeSize__c</fullName>
        <description>The maximum number of journals to be duplicated in one go. The default is 20.</description>
        <label>Journal Duplication Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DuplicatePCRScopeSize__c</fullName>
        <description>The maximum number of payable credit notes to be duplicated in one go. The default is 20.</description>
        <inlineHelpText>The maximum number of payable credit notes to be duplicated in one go. The default is 20.</inlineHelpText>
        <label>PCR Duplication Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DuplicatePINScopeSize__c</fullName>
        <description>The maximum number of payable invoices to be duplicated in one go. The default is 20.</description>
        <inlineHelpText>The maximum number of payable invoices to be duplicated in one go. The default is 20.</inlineHelpText>
        <label>PIN Duplication Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DuplicateSCRScopeSize__c</fullName>
        <description>The maximum number of sales credit notes to be duplicated in one go. The default is 20.</description>
        <inlineHelpText>The maximum number of sales credit notes to be duplicated in one go. The default is 20.</inlineHelpText>
        <label>SCR Duplication Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DuplicateSINScopeSize__c</fullName>
        <description>The maximum number of sales invoices to be duplicated in one go. The default is 20.</description>
        <inlineHelpText>The maximum number of sales invoices to be duplicated in one go. The default is 20.</inlineHelpText>
        <label>SIN Duplication Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mass Actions Settings</label>
</CustomObject>